--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@headlessui/react": "^1.6.6",
     "@heroicons/react": "^2.0.10",
     "@tailwindcss/forms": "^0.5.3",
+    "@tanstack/react-query": "^4.18.0",
     "axios": "^0.27.2",
     "firebase": "^9.9.3",
     "react": "^18.2.0",
@@ -24,6 +25,7 @@
     "react-toastify": "^9.0.8"
   },
   "devDependencies": {
+    "@tanstack/react-query-devtools": "^4.18.0",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
     "@vitejs/plugin-react": "^2.0.1",
